--- a/landing/assets/css/styles_flexboxmodel.css
+++ b/landing/assets/css/styles_flexboxmodel.css
@@ -3,48 +3,52 @@
     padding: 0;
     margin: 0;
 }
+
 .borde{
     border: 1px solid gray;
 }
+
 .titulo{
     height: 70px;
 }
+
 .contenedor{
-    width: 100%;
+    width: 95%;
     max-width: 1280px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 nav{
     height: 70px;
+    display: flex;
+    flex-flow: row nowrap;
 }
 .logo{
-    width: 15%;
-    height: 100%;
-    float: left;
+    flex: 20%;
 }
 .menu{
-    width: 65%;
-    height: 100%;
-    float: left;
+    flex: 65%;    
 }
 .ingreso{
-    width: 20%;
-    height: 100%;
-    float: left;
+    flex: 15%;
 }
 header, section{
     height: 500px;
 }
 .portafolio{
-    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
 }
-.port-izq,
-.port-cnt,
+.port-izq{
+    flex: 1;    
+}
+.port-cnt{
+    flex: 1;    
+}
 .port-der{
-    width: 33.33%;
-    height: 100%;
-    float: left;
+    flex: 1;    
 }
-footer{
-    height: 70px;
-}
+
+
+
